tests/snapshots/examples_fixtures/base__base_alias_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_alias_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E078]: INVALID BASE DIRECTIVE

`import Base as Core` is not allowed.

  --> examples/base/base_alias_error.flx:3:1
  |
3 | import Base as Core
  | ^^^^^^^^^^^^^^^^^^^

Hint:
  Use `import Base` or `import Base except [...]`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/base/base_alias_error.flx:4:1
  |
4 | print(1);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/base/base_alias_error.flx:4:1
  |
4 | print(1);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
